# bgpkit-parser-dump

./: Cargo.toml  README.md
examples/: shrink-rib-composer.rs  shrink-rib.rs
src/: attributes.rs  bgp.rs  error.rs  lib.rs  mrt.rs  table_dump.rs  utils.rs
src/mrt_compose/: composer.rs  error.rs  mod.rs  rib_composer.rs  updates_composer.rs
src/mrt_dump/: attributes.rs  bgp.rs  error.rs  mod.rs  mrt.rs  table_dump.rs  utils.rs
tests/: integration_test.rs
