[package]
name = "bgpkit-parser-dump"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bgpkit-parser = "0.7.0-alpha.2"
bgp-models = "0.7.0-alpha.1"
# bgp-models = {git="https://github.com/bgpkit/bgp-models.git", branch="feature_extend_types"}
byteorder = "1"
thiserror = "1"
enum-primitive-derive = "0.2"
num-traits = "0.1"
ipnetwork = "0.18.0"
